--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-NAMEPC=vancc369
-# NAMEPC=van369
+# NAMEPC=vancc369
+NAMEPC=van369
+FECHAINICIO=2023-12-01
+IPBASEDEDATOS=10.10.1.9
+DATABASECUADRO=cuadro
+DATABASESIPAGO=sipago
+DATABASECUADROPASSWORD=43vivienda
+DATABASESIPAGOPASSWORD=43vivienda
