--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# NAMEPC=vancc369
-NAMEPC=van369
-FECHAINICIO=2023-12-27
+NAMEPC=vancc369
+#NAMEPC=van369
+FECHAINICIO=2024-1-16
 IPBASEDEDATOS=10.10.1.9
 DATABASECUADRO=cuadro
 DATABASESIPAGO=sipago
