--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cors": "^2.8.5",
     "md5": "^2.3.0",
     "mysql2": "^3.6.1",
+    "pdfkit": "^0.14.0",
+    "puppeteer": "^22.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
@@ -45,7 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.9",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.8.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
