--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NAMEPC=vancc369
 #NAMEPC=van369
-FECHAINICIO=2024-1-16
-IPBASEDEDATOS=10.10.1.9
+FECHAINICIO=2024-3-1
+# IPBASEDEDATOS=10.10.1.9
+IPBASEDEDATOS=10.10.0.90
 DATABASECUADRO=cuadro
 DATABASESIPAGO=sipago
 DATABASECUADROPASSWORD=43vivienda
